:sparkles: Add ConditionalOnBean support for generic @Bean return types
Update `ConditionalOnBean` so support generics when resolving the
`@Bean` method.